@@ -1,5 +1,6 @@
 package com.autoauth.processor.model;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -11,11 +12,16 @@ public record AutoAuthUser (
   String userId,
   List<String> roles,
   Map<String, Object> customClaims
-)
-{
+){
 
-    public AutoAuthUser(String userId, List<String> roles) {
-        this(userId, roles, Map.of());
+    public AutoAuthUser {
+        if (roles == null) {
+            roles = Collections.emptyList();
+        }
+
+        if (customClaims == null) {
+            customClaims = Collections.emptyMap();
+        }
     }
 
 }
